--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -26,7 +26,7 @@ source("lib/rstudio.r", encoding="UTF-8")
 
 # Izbira teme
 
-Za vzorec bomo prikazali nekaj podatkov o slovenskih občinah.
+Analiza migracij v Evropi po stratosni skupini, spolu, nacionalnosti. Primerjava z BDP na prebivalca.
 
 ![](slike/grb.png)
 
@@ -38,24 +38,46 @@ Za vzorec bomo prikazali nekaj podatkov o slovenskih občinah.
 source("uvoz/uvoz.r", encoding="UTF-8")
 ```
 
-Uvozili smo podatke o občinah v obliki CSV s statističnega urada ter v obliki HTML
-z Wikipedije. Podatke imamo v dveh razpredelnicah v obliki *tidy data*.
+Uvozil sem podatke z eurostata: https://ec.europa.eu/eurostat/data/database.
+Tabele so uvožene v obliki csv.
 
-1. `druzine` - podatki o družinah za vsako občino
-  - `obcina` - spremenljivka: ime občine (neurejen faktor),
-  - `velikost.druzine` - spremenljivka: število otrok v družini (število: 1, 2, 3 ali 4, kjer zadnja vrednost pomeni 4 ali več),
-  - `stevilo.druzin` - meritev: število družin z ustreznim številom otrok v ustrezni občini (število).
+1. tabela:
+`BDP na prebivalca` - podatki o BDP-ju za države od 2011 do 2017
+  - `Leto` - spremenljivka:  (numeric),
+  - `Država` - spremenljivka: (character)
+  - `BDP` - meritev: BDP na prebivalca (numeric).
 
-2. `obcine` - podatki o občinah
-  - `obcina` - spremenljivka: ime občine (neurejen faktor),
-  - `povrsina` - meritev: površina občine v km$^2$ (število),
-  - `prebivalci` - meritev: prebivalstvo občine (število),
-  - `gostota` - meritev: število prebivalcev na km$^2$ (število),
-  - `naselja` - meritev: število naselij v občini (število),
-  - `ustanovitev` - meritev: leto ustanovitve občine (število),
-  - `pokrajina` - meritev: pokrajina, ki ji občina pripada (neurejen faktor),
-  - `regija` - meritev: regija, ki ji občina pripada (neurejen faktor),
-  - `odcepitev` - meritev: podatki o občinah, od katerih se je občina odcepila (besedilo).
+2.tabela:
+`emi_naslednja` - Kam se izseljujejo
+  - `Leto` - spremenljivka: (numeric),
+  - `Država` - spremenljivka: (character),
+  - `Država izselitve` - spremenljivka : (character),
+  - `Število` - meritev : (numeric)
+  
+3.tabela:
+`emi_starost_spol` - izseljevanje po starosti in spolu
+  - `Leto` - spremenljivka: (numeric),
+  - `Država` - spremenljivka: (character),
+  - `Starost` - spremenljivka : (character),
+  - `Spol` - spremenljivka : (character),
+  - `Število` - meritev : (numeric)
+
+4.tabela:
+`imi_starost_spol` - priseljevanje po starosti in spolu
+  - `Leto` - spremenljivka: (numeric),
+  - `Država` - spremenljivka: (character),
+  - `Starost` - spremenljivka : (character),
+  - `Spol` - spremenljivka : (character),
+  - `Število` - meritev : (numeric)
+
+5.tabela:
+`imig_po_narodnosti` - Narodnosti priseljencev
+  - `Leto` - spremenljivka: (numeric),
+  - `Država` - spremenljivka: (character),
+  - `Državljanstvo` - spremenljivka : (character),
+  - `Število` - meritev : (numeric)
+
+
 
 **Opomba**: da bi razpredelnica `obcine` res bila v obliki *tidy data*, bi morali odstraniti stolpec `gostota` (saj je izpeljan iz stolpcev `povrsina` in `prebivalci`), podatke o pokrajinah pa bi morali premakniti v drugo razpredelnico, saj nekatere občine pripadajo dvema pokrajinama. Podobno bi morali narediti tudi s stolpcem `odcepitev`.
 
